--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bugs": {
         "url": "https://github.com/trond1n/sprint_webpack/issues"
     },
-    "homepage": "https://github.com/trond1n/sprint_webpack#readme",
+    "homepage": "https://trond1n.github.io/sprint_webpack/",
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@babel/core": "^7.10.5",
@@ -31,7 +31,7 @@
         "css-loader": "^3.6.0",
         "cssnano": "^4.1.10",
         "file-loader": "^6.0.0",
-        "gh-pages": "^3.1.0",
+        "gh-pages": "^2.2.0",
         "html-webpack-plugin": "^4.3.0",
         "image-webpack-loader": "^6.0.0",
         "mini-css-extract-plugin": "^0.9.0",
