--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/trond1n/sprint_webpack.git"
+        "url": "https://github.com/trond1n/sprint_webpack.git"
     },
     "keywords": [
         "webpack"
