--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "homework for 11's sprint",
     "main": "sprint.js",
     "scripts": {
-        "build": "cross-env NODE_ENV=production rimraf dist && webpack --mode production",
+        "build": "rm -rf dist && cross-env NODE_ENV=production webpack --mode production",
         "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open --watch",
         "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
     },
